commit with short desc and align fixed

--- a/src/app/learner/pages/learner-my-course/learner-my-course.component.scss
+++ b/src/app/learner/pages/learner-my-course/learner-my-course.component.scss
@@ -1415,6 +1415,9 @@ hr {
 .lxp-text:hover {
   color: $color-white;
 }
+.h-50{
+  height: 50px !important;
+}
 
 .dropbtn {
   background-color: $color-white;
